--- a/discount.html
+++ b/discount.html
@@ -37,7 +37,7 @@
         <h2 id="result">The discount rate will be displayed here.</h2>
     </div>
 
-    <script src="/disc.js"></script>
+    <script src="disc.js"></script>
 </body>
 </html>
 
